# 29Agosto-ScacciaSglavo

./: AI_Act.ipynb  README.md
search_rag_flow/: README.md  crewai_flow.html  math_result.md  pyproject.toml
search_rag_flow/docs/: conf.py  index.rst  main.rst  search_rag_flow.crews.analysis_plot.rst  search_rag_flow.crews.math_crew.rst  search_rag_flow.crews.rag_crew.rst  search_rag_flow.crews.rst  search_rag_flow.rst  tools.rst
search_rag_flow/docs/_build/html/: .buildinfo  .buildinfo.bak  crews.html  genindex.html  index.html  main.html  math_tool.html  modules.html  objects.inv  py-modindex.html  rag_tool.html  research_ddg_tool.html  search.html  search_rag_flow.crews.analysis_plot.analysis_plot.html  search_rag_flow.crews.analysis_plot.html  search_rag_flow.crews.html  search_rag_flow.crews.math_crew.html  search_rag_flow.crews.math_crew.math_crew.html  search_rag_flow.crews.rag_crew.html  search_rag_flow.crews.rag_crew.rag_crew.html  search_rag_flow.crews.search_crew.html  search_rag_flow.crews.search_crew.search_crew.html  search_rag_flow.html  search_rag_flow.main.html  search_rag_flow.tools.html  search_rag_flow.tools.math_tool.html  search_rag_flow.tools.rag_tool.html  search_rag_flow.tools.research_ddg_tool.html  searchindex.js  tools.html  validate_function.html
search_rag_flow/docs/_build/html/.doctrees/: crews.doctree  environment.pickle  (+21 more)
search_rag_flow/files/: AEP_hourly.csv  docs.txt
search_rag_flow/src/search_rag_flow/: main.py
search_rag_flow/src/search_rag_flow/tools/: math_tool.py  rag_qdrant_hybrid.py  rag_tool.py  research_ddg_tool.py
(+79 files in other folders)
