[project]
name = "search_rag_flow"
version = "0.1.0"
description = "search_rag_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "ddgs>=9.5.4",
    "faiss-cpu>=1.12.0",
]

[project.scripts]
kickoff = "search_rag_flow.main:kickoff"
run_crew = "search_rag_flow.main:kickoff"
plot = "search_rag_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
